--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <p>These experiments render a minimal WebGL scene for a ZSpace viewer.</p>
 
+<p>Each experiment is a single HTML page that renders a triangle using a minimal renderer implemented in <a href="https://github.com/xeolabs/zspace-experiments/blob/master/js/renderer.js">renderer.js</a>, while using the ZSpace utility in <a href="https://github.com/xeolabs/zspace-experiments/blob/master/js/zSpace.js">zSpace.js</a> to manage the ZSpace device.</p>
+
 <p>Find the source code at <a href="https://github.com/xeolabs/zspace-experiments">https://github.com/xeolabs/zspace-experiments</a>.</p>
 
 <p>Currently I'm having a problem with Experiment 2, where the view and projection matrices are not correct. I'm making
